--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
    		 	<groupId>org.springframework.boot</groupId>
     			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-resources-plugin</artifactId>
+    			<version>3.8.5</version>
+		</dependency>
+
 
 	</dependencies>
 
