--- a/bin/Jenkinsfile
+++ b/bin/Jenkinsfile
@@ -26,6 +26,8 @@ pipeline{
                 checkout scm
             }
         }
+        
+        /*
         stage('SonarQube analysis') {
             steps{
                 withSonarQubeEnv('SonarQube-Server'){
@@ -53,7 +55,7 @@ pipeline{
                     }
                 }
             }
-        }
+        }*/
         /*
         stage('build')
         {
@@ -70,6 +72,7 @@ pipeline{
         }*/
         // 참고 url : https://cjw-awdsd.tistory.com/35
         /*************** Pulish Over SSH Plug in사용******************/
+        /*
         stage('SSH transfer') {
             steps([$class: 'BapSshPromotionPublisherPlugin']) {
                 sshPublisher(
@@ -91,9 +94,9 @@ pipeline{
                 )
             }
         }
-       
+       */
                 /*************** Pulish Over SSH Plug in사용******************/
-        stage('SSH transfer2') {
+     /*   stage('SSH transfer2') {
             steps([$class: 'BapSshPromotionPublisherPlugin']) {
                 sshPublisher(
                     continueOnError: false, failOnError: true,
@@ -114,7 +117,7 @@ pipeline{
                 )
             }
         }
-
+*/
 
         stage('server restart1 ') {
             steps([$class: 'BapSshPromotionPublisherPlugin']) {
