--- a/bin/Jenkinsfile
+++ b/bin/Jenkinsfile
@@ -132,7 +132,7 @@ pipeline{
                                     sourceFiles: "", //전송할 파일
                                     removePrefix: "", //파일에서 삭제할 경로가 있다면 작성
                                     remoteDirectory: "",//배포할 위치
-                                    execCommand: "sh op.sh" //원격지에서 실행할 커맨드
+                                    execCommand: "cd server && ./op.sh" //원격지에서 실행할 커맨드
                                 )
                             ]
                         )
@@ -155,7 +155,7 @@ pipeline{
                                     sourceFiles: "", //전송할 파일
                                     removePrefix: "", //파일에서 삭제할 경로가 있다면 작성
                                     remoteDirectory: "",//배포할 위치
-                                    execCommand: "sh op.sh" //원격지에서 실행할 커맨드
+                                    execCommand: "cd server && ./op.sh" //원격지에서 실행할 커맨드
                                 )
                             ]
                         )
