--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,9 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
+        
+logging:
+ level:
+  org:
+    springframework : debug
+                  web :debug
